unpackaged/main/default/objects/Community_Footer_Country_Data__mdt/Community_Footer_Country_Data__mdt.object-meta.xml
<CustomObject>
    <description>Stores the data of the global websites and their specific URL&#39;s corresponding to each brand</description>
    <label>Community Footer Country Data</label>
    <pluralLabel>Community_Footer_Country_Data</pluralLabel>
</CustomObject>