unpackaged/main/default/objects/Community_Footer_Country_Data__mdt/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>Stores the name of the related brand</description>
    <label>Brand</label>
    <referenceTo>Webform_Brands__mdt</referenceTo>
    <relationshipLabel>Community_Footer_Country_Data</relationshipLabel>
    <relationshipName>Community_Footer_Country_Data</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>