unpackaged/main/default/objects/Community_Footer_Country_Data__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Stores the URL/text corresponding to each country</description>
    <label>Value</label>
    <type>TextArea</type>
</CustomField>